[ticket/78] Quickedit window is not correctly vertically aligned [ticket/79] Quickedit error message is not correctly aligned

--- a/jQuery_Quick_Edit/root/styles/subsilver2/theme/quickedit.css
+++ b/jQuery_Quick_Edit/root/styles/subsilver2/theme/quickedit.css
@@ -64,13 +64,15 @@
 #quickeditError {
 	display:none;  
 	position:fixed;    
-	height: auto;  
-	width: auto;
+	height: 10%;  
+	width: 250px;
 	background:#FFFFFF;  
 	border:2px solid #cecece;  
 	z-index:2;  
 	padding:12px;  
-	font-size:13px; 
+	font-size:13px;
+	text-align: center;
+	vertical-align: middle;
 }
 
 #quickeditErrorBG {  
